tests/snapshots/default_foreman_toml.snap
---
source: tests/cli.rs
assertion_line: 91
expression: content

---
# This is Foreman's configuration file. You can edit it to tell Foreman about
# new tools that you'd like to install, or to change versions of tools you
# already have.

# When adding new tools, make sure to run `foreman install` so that their
# binaries are installed.

[tools]
# Put any tools you want to install here. To install Rojo 7, you'd use:
# rojo = { github = "rojo-rbx/rojo", version = "7.0.0" }

