tests/snapshots/install_all_tools_before_failing.snap
---
source: tests/cli.rs
assertion_line: 101
expression: content
---
[INFO ] Downloading github.com/JohnnyMorganz/StyLua@^0.11.3
[INFO ] Downloading github.com/Roblox/@^0.2.0
[INFO ] Downloading github.com/Kampfkarren/selene@=0.22.0
[INFO ] Downloading github.com/Roblox/VeryFakeRepository@^0.1.0
[ERROR] Failed to download tool "badly-formatted-tool". Got error: 
        unexpected response body: invalid type: map, expected a sequence at line 1 column 0
        Request from `https://api.github.com/repos/Roblox//releases`
        
        Received body:
        {"message":"Not Found","documentation_url":"https://docs.github.com/rest"}
[ERROR] Failed to download tool "not-a-real-tool". Got error: 
        unexpected response body: invalid type: map, expected a sequence at line 1 column 0
        Request from `https://api.github.com/repos/Roblox/VeryFakeRepository/releases`
        
        Received body:
        {"message":"Not Found","documentation_url":"https://docs.github.com/rest/reference/repos#list-releases"}

